--- a/stylesheet.css
+++ b/stylesheet.css
@@ -75,3 +75,11 @@ nav div a{
 nav div a:hover{
   opacity:1.5;
 }
+
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  [class*="col-"] {
+    width: 100%;
+  }
+}
