--- a/stylesheet.css
+++ b/stylesheet.css
@@ -84,6 +84,7 @@ nav div a:hover{
   }
   p{
     margin-left: 80px;
+    font-size: 20px;
     }
 
   h3{
@@ -108,6 +109,7 @@ nav div a:hover{
 
   p{
     margin-left: 80px;
+    font-size: 20px;
     }
   h2{
       margin-left: 80px;
