--- a/stylesheet.css
+++ b/stylesheet.css
@@ -93,7 +93,8 @@ nav div a:hover{
   }
   h1
   {
-  left: 240px;
+  margin-left: 80px
+  font-size: 18px;
   }
   h2{
     margin-left: 80px;
@@ -103,7 +104,7 @@ nav div a:hover{
 
 @media screen and (max-width: 375px){
   body{
-      width: 100%;
+      background-image:300px;
       font-size: 25px;
     display: block;
     height:auto;
@@ -125,7 +126,7 @@ nav div a:hover{
   }
   h1
   {
-  margin-left: 80px
-  font-zie: 18px;
+  margin-left: 20px
+  font-size: 18px;
   }
 }
