--- a/stylesheet.css
+++ b/stylesheet.css
@@ -116,6 +116,7 @@ nav div a:hover{
     }
   h2{
       margin-left: 80px;
+      font-size: 18px;
       }
 .intro{
   margin-left: 80px;
@@ -123,6 +124,7 @@ nav div a:hover{
 }
   h3{
     margin-left: 80px;
+    font-size: 18px;
   }
   h1
   {
