--- a/stylesheet.css
+++ b/stylesheet.css
@@ -89,10 +89,6 @@ nav div a:hover{
     margin-left: 80px;
     font-size: 30px;
     }
-  h2{
-      margin-left: 80px;
-      font-size: 18px;
-      }
 .intro{
   left: 80px;
   font-size: 18px;
@@ -110,5 +106,32 @@ nav div a:hover{
 }
 
 @media screen and (max-width: 375px){
+  body{
+      background-image:300px;
+      font-size: 25px;
+    display: block;
+    height:auto;
+  }
 
+  p{
+    margin-left: 80px;
+    font-size: 30px;
+    }
+  h2{
+      margin-left: 80px;
+      font-size: 18px;
+      }
+.intro{
+  left: 80px;
+  font-size: 18px;
+}
+  h3{
+    margin-left: 80px;
+    font-size: 18px;
+  }
+  h1
+  {
+  margin-left: 20px
+  font-size: 18px;
+  }
 }
