--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,6 +49,14 @@ p {
   color:rgb(69, 80, 99);
 }
 
+h2 {
+font-family: 'Averia Serif Libre', cursive;
+font-size: 20px;
+margin-top: 100px;
+  margin-left: 240px;
+color:rgb(69, 80, 99);
+}
+
 h3 {
 font-family: 'Averia Serif Libre', cursive;
 font-size: 25px;
