--- a/stylesheet.css
+++ b/stylesheet.css
@@ -85,33 +85,38 @@ nav div a:hover{
   opacity:1.5;
 }
 
-@media screen and (max-width: 768px){
-  body{
-      background-image:300px;
-      font-size: 25px;
+
+@media screen and (max-width: 975px){
+body{
+    background-image:300px;
+    font-size: 25px;
     display: block;
     height:auto;
   }
 
-  p{
+p{
     margin-left: 80px;
     font-size: 30px;
     }
- h2 {
+h2{
+    margin-left: 80px;
+    font-size: 18px;
+      }
+.intro{
   left: 80px;
   font-size: 18px;
 }
-  h3{
-    margin-left: 90px;
+h3{
+    margin-left: 80px;
     font-size: 18px;
   }
-  h1
+h1
   {
-    margin-left: 80px;
-    font-size: 14px;
+  margin-left: 20px
+  font-size: 18px;
   }
-
 }
+
 
 @media screen and (max-width: 375px){
 body{
