--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,12 +35,22 @@ font-size: 25px;
 color:rgb(69, 80, 99);
 }
 
+
+h2:hover{
+  color:red;
+}
+
 h3 {
 font-family: 'Averia Serif Libre', cursive;
 font-size: 25px;
 line-height: 1.4;
 color:rgb(96, 84, 21);
 opacity: 0.6;
+}
+
+
+h3:hover{
+  color:blue;
 }
 
 .name{
