--- a/stylesheet.css
+++ b/stylesheet.css
@@ -169,8 +169,50 @@ h1{
 .code5:hover{
 
 }
+
+#my {
+  position: absolute;
+  z-index: 9;
+  text-align: center;
+  top:50px;
+  left:10px;
+    border:none;s
 }
 
-div[id^='id_']:hover {
-opacity: 0.5;
+#my2 {
+  position: absolute;
+  z-index: 9;
+  text-align: center;
+  top:370px;
+  left:210px;
+    border:none;
+}
+
+#my3 {
+  position: absolute;
+  z-index: 9;
+  text-align: center;
+  top:369px;
+  left:150px;
+    border:none;
+}
+
+#my4 {
+  position: absolute;
+  z-index: 9;
+  width: 100px;
+  text-align: center;
+  top:460px;
+  left:90px;
+    border:none;
+}
+
+#my5 {
+  position: absolute;
+  z-index: 9;
+  text-align: center;
+  top:420px;
+  left:90px;
+    border:none;
+}
 }
