--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,9 +2,17 @@
 body {
   background-color: white;
   background-size: cover;
+
   }
+.beforeafter{
+  display: flex;
+  margin: 100px;
+  margin-left: 260px;
+}
 
+.bf{
 
+}
 p {
     font-family: 'Averia Serif Libre', cursive;
     font-size: 55px;
@@ -77,7 +85,7 @@ margin-left: 160px;
 }
 
 .code3{
-  margin-top: 70px;
+  margin-top: 50px;
     margin-left: 160px;
 }
 
@@ -108,6 +116,9 @@ margin-left: 160px;
   color:red;
 }
 
+.code7{
+    margin-left: 160px;
+}
 .button1{
     top: 10px;
     margin-left: 190px;
@@ -126,7 +137,8 @@ p{
   font-size: 50px;
   margin-left: 20px;
   display: flex;
-  margin-top:190px;
+  margin-top:70px;
+  width:650px;
 }
 
 h2{
@@ -148,7 +160,7 @@ h1{
 
 
 .code3{
-  margin-top: 20px;
+  margin-top: 50px;
   margin-left: 20px;
 
 }
@@ -162,11 +174,13 @@ h1{
 
 .code4{
     margin-left: 20px;
+    margin-top:-150px;
 }
 
 
 .code5{
     margin-left: 20px;
+      margin-top:-130px;
       color:red;
 }
 .code5:hover{
@@ -175,7 +189,11 @@ h1{
 
 
 .code6{
-    margin-left: 200px;
+    margin-left: 300px;
+      margin-top:-130px;
+}
+.code7{
+    margin-left: 20px;
 }
 
 .music{
@@ -185,6 +203,12 @@ h1{
   margin:0 auto;
 }
 
+.before{
+  margin:20px;
+}
+.after{
+  margin:20px;
+}
 
 #button:h3 {
   border: none;
@@ -243,4 +267,75 @@ h1{
   left:90px;
     border:none;
 }
+}
+
+
+.before{
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
+
+.before .b2 {
+  font-family: 'Merriweather', serif;
+  visibility: hidden;
+  font-size: 32px;
+	color: white;
+  text-align: center;
+  position: absolute;
+  z-index: 1;
+  margin-top: 540px;
+  left:250px;
+  opacity: 0;
+  transition: opacity 0.3s;
+	line-height: 30px;
+
+}
+
+.before .b2::after {
+  position: absolute;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+.before:hover .b2{
+  visibility: visible;
+  opacity: 1;
+	color: MediumSeaGreen;
+}
+
+
+.after{
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
+
+.after .a2 {
+  font-family: 'Merriweather', serif;
+  visibility: hidden;
+  font-size: 32px;
+	color: white;
+  text-align: center;
+  position: absolute;
+  z-index: 1;
+  margin-top: 540px;
+  left:290px;
+  opacity: 0;
+  transition: opacity 0.3s;
+	line-height: 30px;
+}
+
+.after .a2::after {
+  position: absolute;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+.after:hover .a2{
+  visibility: visible;
+  opacity: 1;
+	color: Crimson;
 }
